avances sobre el diseño del home

--- a/src/main/resources/templates/im_a_center.html
+++ b/src/main/resources/templates/im_a_center.html
@@ -111,8 +111,8 @@
 
 			<!-- partial:../../partials/_footer.html -->
 			<footer class="footer d-flex flex-column flex-md-row align-items-center justify-content-between">
-				<p class="text-muted text-center text-md-left">Copyright © 2021 <a href="#" target="_blank">EduFind</a>.
-					Todos los derechos reservados</p>
+				<p class="text-muted text-center text-md-left">Copyright © 2022 <a href="#" target="_blank">EduFind</a>.
+					Todos los derechos reservados - Equipo 5 Taller Web</p>
 				<p class="text-muted text-center text-md-left mb-0 d-none d-md-block">Desarrollado con <i
 						class="mb-1 text-primary ml-1 icon-small" data-feather="heart"></i></p>
 			</footer>
